<resources>
    <string name="app_name">AndroidLibs</string>
    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="inter_finger">指间缘</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>

    <string name="user_agreement">登录或注册同意《缘分聊用户协议》</string>
    <string name="submit">提交</string>
    <string name="entry_information">录入信息</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_immediately">立即登录</string>
    <string name="sign_up_now">立即注册</string>
    <string name="modify_now">立即修改</string>
    <string name="new_user_registration">新用户注册</string>
    <string name="log_in">登录</string>
    <string name="registered">注册</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="cecal">取消</string>
    <string name="registration_success">注册成功</string>
    <string name="successfully_modified">修改成功</string>
    <string name="preferably_online">优选在线</string>
    <string name="attention">关注</string>
    <string name="greet">打招呼</string>
    <string name="click_matching">一键匹配</string>
    <string name="group_messaging">群发消息</string>
    <string name="share_money">分享赚钱</string>
    <string name="next_step">下一步</string>
    <string name="choose_recommendation">选择推荐</string>
    <string name="select_tag">选择标签</string>
    <string name="nearby_activities">附近动态</string>
    <string name="private_mi">私密</string>
    <string name="chatroom">聊天室</string>
    <string name="favorite">收藏</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="online">在线</string>
    <string name="people_nearby">附近的人</string>
    <string name="recommend">推荐</string>
    <string name="lot_bar">缘吧</string>
    <string name="host_player">主播榜</string>
    <string name="tyrant_list">土豪榜</string>
    <string name="friend">好友</string>
    <string name="integral_value">积分值</string>
    <string name="monthly">月入</string>
    <string name="how_diamond">%s钻石</string>
    <string name="daily_list">日榜</string>
    <string name="weekly_list">周榜</string>
    <string name="overall_list">总榜</string>
    <string name="complaint_suggestions">投诉充值建议</string>
    <string name="system_information">系统消息</string>
    <string name="data">资料</string>
    <string name="dynamic">动态</string>
    <string name="ta_chat_room">TA的聊天室</string>
    <string name="enter_chat">进入聊天室</string>
    <string name="photo_album">相册</string>
    <string name="contact_details">联系方式</string>
    <string name="look_over">查看</string>
    <string name="matching_probability">匹配概率</string>
    <string name="connectivity">接通率：</string>
    <string name="number_calls">通话次数：</string>
    <string name="average_call_duration">平均通话时长：</string>
    <string name="user_evaluation">用户评价：</string>
    <string name="person_info">个人信息</string>
    <string name="age">年龄：</string>
    <string name="height">身高：</string>
    <string name="figure">身材：</string>
    <string name="person_label">个人标签</string>
    <string name="receive_gift">收到礼物</string>
    <string name="voice">语音</string>
    <string name="video">视频</string>
    <string name="clear_cache">清除缓存</string>
    <string name="private_message_tone">私信消息提示音</string>
    <string name="clear_chat_history">清除聊天记录页面</string>
    <string name="blacklist">黑名单</string>
    <string name="version_number">版本号</string>
    <string name="strategy_number">策略号</string>
    <string name="about_fate_chat">关于缘分聊</string>
    <string name="exit_current_account">退出当前账号</string>
    <string name="set_up">设置</string>
    <string name="opinion_suggestion">请描述您的宝贵意见或建议</string>
    <string name="enter_suggestion">请输入投诉建议…</string>
    <string name="feedback">意见反馈</string>
    <string name="content_description">内容描述</string>
    <string name="reason_complaint">投诉原因</string>
    <string name="select_reason">请选择投诉原因</string>
    <string name="suggestions">投诉建议</string>
    <string name="personal_dynamics">个人动态</string>
    <string name="album">相册</string>
    <string name="short_video">短视频</string>

    <string name="new_user">新注册</string>
    <string name="giving_gifts">送礼物</string>
    <string name="diamonds">钻石</string>
    <string name="follow">关注</string>
</resources>
