<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/common"
            layout="@layout/common_head_white_bg" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_private_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            android:layout_marginTop="@dimen/space_10"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/private_message_tone"
            app:cie_show_arrow="true" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_clear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            app:cie_editable="false"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/clear_cache"
            app:cie_show_arrow="true" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_clear_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            app:cie_editable="false"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/clear_chat_history"
            app:cie_show_arrow="true" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_blacklist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            app:cie_editable="false"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/blacklist"
            app:cie_show_arrow="true" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_version_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            app:cie_editable="false"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/version_number"
            app:cie_show_arrow="true" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_strategy_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            app:cie_editable="false"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/strategy_number"
            app:cie_show_arrow="true" />

        <com.kunpeng.userchat.view.CustomInfoEditTextView
            android:id="@+id/tv_about_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            app:cie_editable="false"
            app:cie_mandatory_visibility="gone"
            app:cie_prompt_text="@string/about_fate_chat"
            app:cie_show_arrow="true" />

        <TextView
            android:id="@+id/tv_exit_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/space_38"
            android:layout_marginTop="@dimen/space_30"
            android:layout_marginEnd="@dimen/space_38"
            android:background="@drawable/bg_item_login"
            android:gravity="center"
            android:text="@string/exit_current_account"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</layout>
