<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/common"
            layout="@layout/common_head_white_bg" />

        <com.kunpeng.common.view.widget.roundtextview.RoundRelativeLayout
            android:id="@+id/rl_reason_complaint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_54"
            android:layout_marginStart="@dimen/space_15"
            android:layout_marginTop="@dimen/space_13"
            android:layout_marginEnd="@dimen/space_15"
            app:rv_backgroundColor="@color/white"
            app:rv_cornerRadius="@dimen/space_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_15"
                android:text="@string/reason_complaint"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_18"
                android:src="@drawable/icon_mine_nav" />

            <TextView
                android:id="@+id/tv_select_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_15"
                android:layout_toStartOf="@id/iv_arrow"
                android:text="@string/select_reason"
                android:textColor="@color/color_222222"
                android:textColorHint="@color/color_C1C7CF"
                android:textSize="@dimen/text_size_15" />

        </com.kunpeng.common.view.widget.roundtextview.RoundRelativeLayout>

        <com.kunpeng.common.view.widget.roundtextview.RoundRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_15"
            android:layout_marginTop="@dimen/space_15"
            android:layout_marginEnd="@dimen/space_15"
            app:rv_backgroundColor="@color/white"
            app:rv_cornerRadius="@dimen/space_10">

            <TextView
                android:id="@+id/tv_content_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_15"
                android:layout_marginTop="@dimen/space_15"
                android:text="@string/content_description"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/text_size_15" />

            <EditText
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_150"
                android:layout_below="@id/tv_content_description"
                android:layout_marginStart="@dimen/space_15"
                android:layout_marginTop="@dimen/space_10"
                android:layout_marginEnd="@dimen/space_15"
                android:background="@drawable/bg_f4f4f4"
                android:gravity="start"
                android:hint="@string/enter_suggestion"
                android:paddingStart="@dimen/space_15"
                android:paddingTop="@dimen/space_15"
                android:textColor="@color/color_222222"
                android:textColorHint="@color/color_C1C7CF"
                android:textSize="@dimen/text_size_12" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60"
                android:layout_below="@id/tv_content"
                android:layout_marginStart="@dimen/space_15"
                android:layout_marginTop="@dimen/space_10"
                android:layout_marginEnd="@dimen/space_15"
                android:layout_marginBottom="@dimen/space_15" />

        </com.kunpeng.common.view.widget.roundtextview.RoundRelativeLayout>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/space_38"
            android:layout_marginTop="@dimen/space_30"
            android:layout_marginEnd="@dimen/space_38"
            android:background="@drawable/bg_item_login"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</layout>
